# 0g-vc

./: .gitignore  Cargo.toml  README.md  build_circuit.sh  frontend.sh  package-lock.json  package.json
circuits/: check_vc.circom  custom.circom  keccak.circom  keccak_ori.circom  merkel_proof.circom  selector.circom  test_aes.circom  utils.circom
circuits/aes/: cipher.circom  key_expansion.circom  mix_columns.circom  sbox128.circom  tbox.circom  transformations.circom  utils.circom
circuits/keccak/: keccak.circom  utils.circom
circuits/test/: example.circom  hasher_example.circom
src/: aes.rs  args.rs  circuit.rs  crypro.rs  groth16.rs  lib.rs  libsnark.rs  main.rs  params.rs  prove_backend.rs  prove_frontend.rs  sample.rs  signal.rs  utils.rs  vc.rs
src/cpu/: mod.rs  prove_backend.rs
src/gpu/: mod.rs  prove_backend.rs
src/types/: array.rs  ext.rs  input.rs  mod.rs  vc.rs
zk-input/: mock.json
