[package]
name = "vc-prove"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-circom = { git = "https://github.com/gakonst/ark-circom.git" }
ark-groth16 = { git = "https://github.com/0glabs/groth-16-gpu.git", features = ["parallel"], rev = "140fe599b23d6e0eaf2dcca29c9f02821ddca0bf" }
# ark-groth16 = { path = "../groth-16-gpu", features = ["parallel"] }
ark-ff = "0.4.1"
ark-serialize = "0.4"
ark-ec = "0.4.1"
chrono = "0.4"
hex = "0.4"
rand = "0.8"
ark-crypto-primitives = { version = "0.3", default-features = false }
ark-bn254 = { version = "=0.4.0" }
sha2 = "0.9.0"
num-bigint = { version = "=0.4.3", default-features = false, features = ["rand"] }
ark-std = "0.4"
eyre = "0.6"

[features]
default = ["ark-groth16/print-trace"]
cuda = ["ark-groth16/cuda"]
