[package]
name = "vc-prove"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ark-groth16 = "0.4"
ark-ff = "0.4.1"
ark-circom = "0.1"
ark-serialize = "0.4"
ark-ec = "0.4.1"
ark-bn254 = "0.4"
ark-std = "0.4"

chrono = "0.4"
hex = "0.4"
rand = "0.8"
rand_xorshift = "0.3"
tiny-keccak = "2.0"
keccak-hash = "0.10.0"

sha2 = "0.9.0"
num-bigint = { version = "=0.4.3", default-features = false, features = ["rand"] }

eyre = "0.6"
num-traits = { version = "=0.2.15", default-features = false }

[features]
default = ["ark-groth16/parallel", "ark-groth16/print-trace"] # "ark-groth16/print-trace"
# cuda = ["ark-groth16/cuda-bn254"]

[patch.crates-io]
# wasmer = { git = "https://github.com/0glabs/wasmer.git", rev = "4c2dbdc" }
# ark-groth16 = { git = "https://github.com/0glabs/0g-groth16-gpu.git", rev = "e99b587" }
# ark-groth16 = { path = "../0g-groth16-gpu" }

[[bin]]
name = "example"