[package]
name = "vc-prove"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ark-groth16 = "0.4"
ark-ff = "0.4.1"
ark-circom = "0.1"
ark-serialize = "0.4"
ark-ec = "0.4.1"
ark-bn254 = "0.4"
ark-std = "0.4"

chrono = "0.4"
hex = "0.4"
rand = "0.8"
rand_xorshift = "0.3"
tiny-keccak = "2.0"
keccak-hash = "0.10.0"
rayon = "*"

sha2 = "0.9.0"
aes = "0.8" 
ctr = "0.9"
num-bigint = { version = "=0.4.3", default-features = false, features = ["rand"] }

eyre = "0.6"
num-traits = { version = "=0.2.15", default-features = false }

libsnark-rust = { git = "https://github.com/ChenxingLi/libsnark-rust.git", features = ["parallel"], optional = true }

[features]
default = ["ark-groth16/parallel"]
cuda = ["ark-groth16/cuda-bn254"]
trace = ["ark-groth16/print-trace"]
libsnark = ["libsnark-rust"]


[patch.crates-io]
wasmer = { git = "https://github.com/0glabs/wasmer.git", rev = "4c2dbdc" }
ark-groth16 = { git = "https://github.com/0glabs/0g-groth16-gpu.git", rev = "624806e" }
# ark-groth16 = { path = "../0g-groth16-gpu" }
ark-circom = { git = "https://github.com/0glabs/circom-compat.git", rev = "87b8855"}